# GoGoGo/docs/swagger.json
@@ -1,12 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This API Handle Products.",
-        "title": "Certified Tech Developer",
-        "termsOfService": "https://developers.ctd.com.ar/es_ar/terminos-y-condiciones",
+        "description": "This API Handle Clinica.",
+        "title": "Clinica Odotntologica Dientes GoGoGo",
+        "termsOfService": "https://developers.gogogo.ctd.com.ar/es_ar/terminos-y-condiciones",
         "contact": {
             "name": "API Support",
-            "url": "https://developers.ctd.com.ar/support"
+            "url": "https://developers.gogogo.ctd.com.ar/support"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,16 +15,16 @@
         "version": "1.0"
     },
     "paths": {
-        "/products/{id}": {
+        "/dentists/{id}": {
             "get": {
-                "description": "Gets a product by id from the repository",
+                "description": "Gets a dentist by ID from the repository",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "dentists.Dentist"
                 ],
-                "summary": "Gets a product by id",
+                "summary": "Gets a dentist by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -38,7 +38,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/products.Product"
+                            "$ref": "#/definitions/dentists.Dentist"
                         }
                     }
                 }
@@ -46,32 +46,19 @@
         }
     },
     "definitions": {
-        "products.Product": {
+        "dentists.Dentist": {
             "type": "object",
-            "required": [
-                "expiration",
-                "price"
-            ],
             "properties": {
-                "code_value": {
+                "first_name": {
                     "type": "string"
                 },
-                "expiration": {
-                    "type": "string"
-                },
-                "id": {
+                "idDentist": {
                     "type": "integer"
                 },
-                "is_published": {
-                    "type": "boolean"
-                },
-                "name": {
+                "last_name": {
                     "type": "string"
                 },
-                "price": {
-                    "type": "number"
-                },
-                "quantity": {
+                "registration_number": {
                     "type": "integer"
                 }
             }
